<resources>
    <string name="app_name">TUPI</string>
    <string name="app_description">TUPI APP é a forma mais tecnológica e rápida de conseguir uma viagem na cidade.\n\nNas próximas telas solicitaremos algumas permissões que serão necessárias para utilizar o app corretamente.</string>
    <string name="erro_capturar_foto">Erro ao capturar foto.</string>
    <string name="atencao">Atenção</string>
    <string name="mensagem_erro_foto_cancelada">foto cancelada</string>
    <string name="ok">OK</string>
    <string name="comecar">Começar</string>
    <string name="fechar">Fechar</string>
    <string name="realizando_cadastro">Realizando cadastro…</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="carregando">carregando…</string>
    <string name="mock_location_not_allowed">Localização simulada não permitida.</string>
    <string name="mensagens">mensagens</string>
    <string name="nome_do_passageiro">Nome do passageiro</string>
    <string name="cpf">CPF</string>
    <string name="nome_do_passageiro_que_ir_embarcar">Nome do passageiro que irá embarcar</string>
    <string name="digite_o_cpf_do_passageiro">Digite o CPF do passageiro.</string>
    <string name="embarque_agora_mesmo">Embarque agora mesmo!</string>
    <string name="voce_ja_chegou_ao_destino">Você já chegou ao destino</string>
    <string name="embarque_em_x_minutos">Embarque em: %s</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="bem_vindo_vamos_comecar">Bem-vindo(a)\nVamos começar</string>
    <string name="bem_vindo_vamos_viajar">Bem-vindo(a)\nVamos viajar!</string>
    <string name="faca_login_ou_solicite_acesso_ao_tupi">Faça o seu login ou solicite o seu cadastro na TUPI.</string>
    <string name="ou">ou</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="acessando">Acessando…</string>
    <string name="erro_estabelecer_conexao_servidor">Erro ao tentar estabelecer conexão com o servidor</string>
    <string name="passageiro_nao_encontrado">Passageiro não encontrado. (E-mail não cadastrado)</string>
    <string name="continuar_cadastro">Continuar cadastro</string>
    <string name="politica_privacidade_01">Ao continuar, eu concordo com os Termos de Uso da TUPI e confirmo que li a Política de Privacidade.</string>
    <string name="politica_privacidade_02">Eu também concordo que a TUPI e seus representantes podem entrar em contato comigo por e-mail, telefone ou SMS (inclusive por meios automatizados) no endereço de e-mail ou número que forneci, inclusive para fins de marketing.</string>
    <string name="cidade">Cidade</string>
    <string name="numero_telefone">Número de telefone</string>
    <string name="endereco_email">Endereço de e-mail</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome">Nome</string>
    <string name="dados_pessoais">Dados pessoais</string>
    <string name="vamos_criar_sua_conta">Vamos criar sua conta</string>
    <string name="tire_sua_foto_perfil">Tire sua foto do perfil</string>
    <string name="info_foto_perfil">Sua foto de perfil ajuda as pessoas a reconhecerem você.\nNão é possível alterar a foto do perfil após enviá-la.</string>
    <string name="info_foto_perfil_instrucao_1">Fique de frente para a câmera e deixe os olhos e a boca visíveis</string>
    <string name="info_foto_perfil_instrucao_2">Confira se a foto está nítida, bem iluminada e sem reflexos</string>
    <string name="info_foto_perfil_instrucao_3">Não fotografe outra foto, não use filtros nem retoque a imagem</string>
    <string name="exemplo">Exemplo</string>
    <string name="tirar_foto_concluir_cadastro">Tirar foto e concluir cadastro</string>
    <string name="voce_precisa_aceitar_permissao_para_tirar_foto">Você precisa aceitar todas as permissões para poder tirar a foto.</string>
    <string name="cpf_invalido">CPF inválido</string>
    <string name="email_invalido">E-mail inválido</string>
    <string name="adicione_um_cartao">Adicione um cartão</string>
    <string name="adicione_cartao_para_recargas_tupi">Adicione o cartão para você fazer recargas no TUPI.\nTudo com mais segurança e agilidade.</string>
    <string name="holder">TUPI Passageiro</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="data_validade">Data de validade</string>
    <string name="cvv">CVV</string>
    <string name="cep">CEP</string>
    <string name="nome_como_aparece_cartao">Nome como aparece no cartão</string>
    <string name="adicionar_cartao_concluir_cadastro">Adicionar cartão</string>
    <string name="preencha_todos_dados_processeguir_cadastro">Favor preencha todos os dados para prosseguir com o seu cadastro.</string>
    <string name="passageiro_informado_ja_cadastrado_sistema">O e-mail informado para o passageiro já se encontra cadastrado no sistema.\nCaso você tenha esquecido a sua senha volte na tela de login e clique em "Esqueceu a senha" que iremos te ajudar a recuperar sua conta.</string>
    <string name="senha_nao_confere_login">A senha informada não pertence a esse usuário.</string>
    <string name="voce_ainda_nao_possui_cadastro_tupi">Você ainda não possui cadastro no TUPI.</string>
    <string name="por_favor_ative_sua_localizacao">Por favor, ative sua localização</string>
    <string name="login_expirado">Seu acesso expirou, favor realize seu login novamente.</string>
    <string name="nenhuma_parada_encontrada_proximo_voce">Nenhuma parada encontrada próximo a você</string>
    <string name="camera">Camera</string>
    <string name="uso_permissao_camera">A permissão de câmera será apenas para tirar a sua foto, em um momento específico do seu cadastro, para ficar mais fácil do TUPI Driver lhe identificar.</string>
    <string name="write_external_storage">Armazenamento</string>
    <string name="uso_permissao_write_external_storage">O TUPI acessa o armazenamento do dispositivo para salvar a foto capturada do seu cadastro.</string>
    <string name="access_fine_location">Localização</string>
    <string name="uso_permissao_access_fine_location">O TUPI coleta dados de localização para exibir as paradas onde o TUPI irá passar mais perto de você e lhe guiar para a parada mais próxima.</string>
    <string name="access_background_location">Localização em segundo plano</string>
    <string name="uso_permissao_access_background_location">No Android 11 a confirmação da permissão de localização em segundo plano mudou, agora você precisa confirmar manualmente nas configurações que você deseja que o TUPI consulta sua localização \"O tempo todo\".\n\nPrecisamos dessa permissão para a correta usabilidade da ferramenta.</string>
    <string name="msg_permissao_negada">Precisamos dessa permissão para continuar com o processo</string>
    <string name="msg_permissao_negada_desabilitada">Precisamos dessa permissão para continuar com o processo, como você desativou para não receber mais informativos dessa permissão precisaremos que você informe essa permissão manualmente.\n\nNa próxima tela acesse o menu \"Permissões\" e ative para \"%s\"</string>
    <string name="pronto">Pronto</string>
    <string name="permission_activity_sucesso">Agora você está pronto para usar o TUPI</string>
    <string name="aproxime_para_ver_paradas">Aproxime para ver as paradas</string>
    <string name="voce_ainda_nao_viajou_com_tupi">Você ainda não viajou com TUPI</string>
    <string name="viagens_frequentes">Viagens Frequentes</string>
    <string name="sair">Sair</string>
    <string name="para_onde_voce_vai">Para onde você vai?</string>
    <string name="sair_interrogacao">Sair?</string>
    <string name="deseja_deslogar_seu_usuario_tupi">Deseja deslogar seu usuário do TUPI?\n\nVocê precisará realizar seu login novamente para utilizar a plataforma.</string>
    <string name="cancelar">Cancelar</string>
    <string name="continuar_conectado">Continuar conectado</string>
    <string name="editar_conta">Editar conta</string>
    <string name="activity_dados_pessoais">Meu cadastro</string>
    <string name="app_email">contato@tupi.com.br</string>
    <string name="activity_editar_dados_pessoais">Editar meu cadastro</string>
    <string name="senha_atual">Senha atual</string>
    <string name="nova_senha">Nova senha</string>
    <string name="confirme_nova_senha">Confirme a nova senha</string>
    <string name="salvar_informacoes">Salvar informações</string>
    <string name="confirmar">Confirmar</string>
    <string name="senha_diferentes">Senha diferentes</string>
    <string name="senha_nao_confere">Senha não confere</string>
    <string name="salvando">Salvando…</string>
    <string name="cadastro_atualizado_sucesso">Cadastro atualizado com sucesso</string>
    <string name="sucesso">Sucesso</string>
    <string name="registro_nao_encontrado_feche_tente_novamente">Registro não foi encontrado na base de dados, feche o TUPI e tente novamente.</string>
    <string name="erro">Erro</string>
    <string name="activity_pagamento">Carteira</string>
    <string name="forma_pagamento">Forma de pagamento</string>
    <string name="adicionar_outro_cartao">Adicionar outro cartão</string>
    <string name="registro_salvo_sucesso">Registro salvo com sucesso</string>
    <string name="cartao_nao_encontrado">Cartão não encontrado. Entre em contato com o TUPI para resolver esse problema.</string>
    <string name="atualizacao_cartao_nao_autorizado">O sistema recusou a atualização desse cartão de crédito. Entre em contato com o TUPI.</string>
    <string name="activity_adicionar_novo_cartao">Adicionar novo cartão</string>
    <string name="adicionar_cartao">Adicionar cartão</string>
    <string name="selecione_destino">Selecione o destino…</string>
    <string name="selecione_origem">Selecione a origem…</string>
    <string name="defina_um_local_mapa">Definir destino no mapa</string>
    <string name="erro_encontrar_locais">Erro ao tentar encontrar os locais</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Criar conta</string>
    <string name="entrar_ou_criar_conta">Entrar ou Criar Conta</string>
    <string name="localizacao_atual">Localização atual</string>
    <string name="a_partir_desse_ponto_sua_localizacao_deve_esta_habilitada">A partir desse ponto sua localização deve está habilitada.</string>
    <string name="nao_existe_viagem_para_este_destino">Não existem viagens para este destino</string>
    <string name="voltar">Voltar</string>
    <string name="indo_para">Indo para:</string>
    <string name="calculando_rotas">Calculando rotas…</string>
    <string name="gerando_rota">Gerando rota…</string>
    <string name="erro_obter_valores_viagem">Erro ao tentar obter os valores da viagem.</string>
    <string name="finalizando">Finalizando…</string>
    <string name="erro_finalizar_viagem">Ocorreu um erro ao tentar finalizar sua viagem.</string>
    <string name="plano_de_fundo">Plano de Fundo</string>
    <string name="ops">Ops…</string>
    <string name="parece_que_voce_perdeu_viagem">Parece que você perdeu a viagem…</string>
    <string name="informacao_cancelamento">Taxas poderão ser cobradas devido a não utilização do serviço agendado previamente.</string>
    <string name="procurar_nova_viagem">Procurar nova viagem</string>
    <string name="solicitando_viagem">Solicitando viagem…</string>
    <string name="pagamento_nao_autorizado_verifique_seu_cartao_credito">Pagamento não autorizado.\n\nVerifique seu cartão de crédito, em seu cadastro, caso o problema persista entre em contato com a operadora de seu cartão.</string>
    <string name="voce_esqueceu_sua_senha_interrogacao">Você esqueceu a sua senha?</string>
    <string name="complemento">Complemento</string>
    <string name="historico_de_viagens">Histórico de viagens</string>
    <string name="pagamento">Pagamento</string>
    <string name="perfil">Perfil</string>
</resources>