<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/bem_vindo_vamos_comecar"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/faca_login_ou_solicite_acesso_ao_tupi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivGoogleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/vc_btn_google"
            android:onClick="onGoogleLogin"
            android:foreground="?android:attr/selectableItemBackground" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/ou" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editText_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#666666"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#F68B20"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/entrar"
            android:onClick="onNormalLogin"
            android:textAllCaps="false"
            android:textColor="#16163F"
            android:textStyle="bold"
            android:theme="@style/Theme.MaterialComponents.Light" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnCriarConta"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/ubuntu_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/criar_conta"
            android:textAllCaps="false"
            android:textColor="#16163F"
            android:textStyle="bold"
            android:theme="@style/Theme.MaterialComponents.Light"
            app:strokeColor="#F68B20" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="onRecuperarSenha"
            android:textAllCaps="false"
            android:text="@string/voce_esqueceu_sua_senha_interrogacao"
            android:textColor="#2B2B88" />
    </LinearLayout>

</LinearLayout>