<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.cadastro.CadastroActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Tupi.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Tupi.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFEFEF"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EFEFEF"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vamos_criar_sua_conta"
                android:textColor="#2D2D2D"
                android:textStyle="bold"
                android:textSize="40sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/dados_pessoais"
                android:textColor="#565656" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nome"
                android:textColor="#565656" />

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/vc_imput_nome"
                android:inputType="textPersonName|textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sobrenome"
                android:textColor="#565656" />

            <EditText
                android:id="@+id/editTextSobreNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vc_imput_nome"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="textPersonName|textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cpf"
                android:textColor="#565656" />

            <EditText
                android:id="@+id/editTextCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vc_imput_nome"
                android:digits="0123456789"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="number"
                android:maxLength="14" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/endereco_email"
                android:textColor="#565656" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vc_imput_nome"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/numero_telefone"
                android:textColor="#565656" />

            <EditText
                android:id="@+id/editTextTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/vc_imput_nome"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:digits="0123456789"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cidade"
                android:textColor="#565656" />

            <EditText
                android:id="@+id/editTextCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:inputType="textCapWords"
                android:background="@drawable/vc_imput_nome" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/complemento"
                android:textColor="#565656" />

            <EditText
                android:id="@+id/editTextComplemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:maxLength="244"
                android:layout_marginBottom="24dp"
                android:inputType="textCapWords"
                android:background="@drawable/vc_imput_nome" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTxt_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                android:hint="@string/senha"
                app:hintTextColor="@color/text_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="#666666"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.legacy.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#8A8A8A" />

            <TextView
                android:id="@+id/politicaPrivacidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/politica_privacidade_01" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/politica_privacidade_02" />

            <Button
                android:id="@+id/btnContinuarCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#F68B20"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/continuar_cadastro"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
