<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.home.menulateral.dados.DadosPessoaisActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Tupi.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Tupi.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/vc_logo_tupi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nome"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/numero_telefone"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00 00000-0000"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <androidx.legacy.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/editar_conta"
            android:textColor="#2B2B88"
            android:visibility="visible"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:onClick="onEditar"
            app:icon="@drawable/vc_editarconta" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>